feat: 修改一些配置

--- a/src/database/fixture/ts-fullstack/1.md
+++ b/src/database/fixture/ts-fullstack/1.md
@@ -531,7 +531,7 @@ pnpm dev
 
 ![](https://cn-nb1.rains3.com/3rcd/202405170000431.png)
 
-直到两个断点都执行过之后，浏览器顺利返回“hello pincman!”，并在控制台输出所有`console.log`
+直到两个断点都执行过之后，浏览器顺利返回“hello yuyue!”，并在控制台输出所有`console.log`
 
 ![](https://cn-nb1.rains3.com/3rcd/202405170002040.png)
 
