--- a/src/database/fixture/ts-fullstack/11.md
+++ b/src/database/fixture/ts-fullstack/11.md
@@ -384,9 +384,9 @@ export const createUserData = async () => {
     await prisma.user.create({
         select: { id: true },
         data: {
-            username: 'pincman',
+            username: 'yuyue',
             password: hashPassword('12345678aA$'),
-            email: 'pincman@example.com',
+            email: 'yuyue@example.com',
         },
     });
     for (let index = 0; index < 12; index++) {
