--- a/src/database/fixture/ts-fullstack/8.md
+++ b/src/database/fixture/ts-fullstack/8.md
@@ -1427,9 +1427,9 @@ if (!isNil(post)) router.replace(`/posts/${post.slug || post.id}`);
 // ..
 // 前面我们已经在布局中添加了SEO数据
 export const metadata: Metadata = {
-    title: 'pincman的博客',
+    title: 'yiyue的博客',
     description:
-        'pincman的个人博客,提供一些ts、react、node.js、php、golang相关的技术文档以及分享一些生活琐事',
+        'yiyue的个人博客,提供一些ts、react、node.js、php、golang相关的技术文档以及分享一些生活琐事',
 };
 
 // src/app/(pages)/posts/[item]/page.tsx
