--- a/src/database/fixture/ts-fullstack/2.md
+++ b/src/database/fixture/ts-fullstack/2.md
@@ -648,9 +648,9 @@ import type { FC, PropsWithChildren } from 'react';
 import { Header } from '../_components/header';
 import $styles from './layout.module.css';
 export const metadata: Metadata = {
-    title: 'pincman的博客',
+    title: 'yiyue的博客',
     description:
-        'pincman的个人博客,提供一些ts、react、node.js、php、golang相关的技术文档以及分享一些生活琐事',
+        'yiyue的个人博客,提供一些ts、react、node.js、php、golang相关的技术文档以及分享一些生活琐事',
 };
 
 const AppLayout: FC<PropsWithChildren> = ({ children }) => (
